feat: add presentation slide

--- a/src/slides/intro/Title.astro
+++ b/src/slides/intro/Title.astro
@@ -23,6 +23,12 @@ import TitleBackground from "./TitleBackground.svelte";
 	</div>
 </Slide>
 
+<Slide>
+	<p>Salut 👋 moi c'est</p>
+	<h1>Julien Sulpis</h1>
+	<p>J'essaie de faire des trucs cools sur le web</p>
+</Slide>
+
 <style lang="scss">
 	.title-wrapper {
 		position: fixed;
