--- a/src/slides/part-2/js-libraries/framer/Framer.astro
+++ b/src/slides/part-2/js-libraries/framer/Framer.astro
@@ -65,12 +65,12 @@ const subSectionTitle = "React";
 	</div>
 </Slide>
 
-<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
+<!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<FramerTitle />
 	<div class="content">
 		<List client:visible />
 	</div>
-</Slide>
+</Slide> -->
 
 <style>
 	.content {
