--- a/src/slides/part-3/canvas-webgl/shaders/Shaders.astro
+++ b/src/slides/part-3/canvas-webgl/shaders/Shaders.astro
@@ -37,7 +37,7 @@ const subSectionTitle = "Shaders GLSL";
 	</div>
 </Slide>
 
-<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
+<!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<div class="gpu-wrapper">
 		<img  class="big" data-src={gpuImage} alt="" />
 		<div>
@@ -45,7 +45,7 @@ const subSectionTitle = "Shaders GLSL";
 			<p><strong>GPU</strong></p>
 		</div>
 	</div>
-</Slide>
+</Slide> -->
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<img
