chore: update base url

--- a/src/slides/intro/Title.astro
+++ b/src/slides/intro/Title.astro
@@ -4,6 +4,12 @@ import TitleBackground from "./TitleBackground.svelte";
 ---
 
 <Slide>
+	<p>Salut 👋 moi c'est</p>
+	<h1>Julien Sulpis</h1>
+	<p>J'aime faire des trucs cools sur le web</p>
+</Slide>
+
+<Slide>
 	<TitleBackground client:visible />
 	<div class="title-wrapper">
 		<h1>
@@ -23,11 +29,7 @@ import TitleBackground from "./TitleBackground.svelte";
 	</div>
 </Slide>
 
-<Slide>
-	<p>Salut 👋 moi c'est</p>
-	<h1>Julien Sulpis</h1>
-	<p>J'essaie de faire des trucs cools sur le web</p>
-</Slide>
+
 
 <style lang="scss">
 	.title-wrapper {
