--- a/src/slides/part-2/flip/FlipDefinition.astro
+++ b/src/slides/part-2/flip/FlipDefinition.astro
@@ -78,8 +78,10 @@ element.style.transform = \`translate(\${deltaX}px, \${deltaY}px)\`;`
 	<div class="container">
 		<h2><strong>P</strong>lay</h2>
 		<video
-			src="/slides-template/flip-4.mov"
-			onclick="this.currentTime = 0;this.play()"></video>
+			src="/talk-animation-techniques/flip-4.mov"
+			onclick="
+			this.currentTime = 0; this.play()
+"></video>
 	</div>
 
 	<CodeBlock lang="javascript">
