--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,11 @@ const { title } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/slides-template/favicon.svg" />
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href="/talk-animation-techniques/favicon.svg"
+		/>
 		<meta name="generator" content={Astro.generator} />
 
 		<title>{title}</title>
