fix: broken production build

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Fast from "../slides/intro/Fast.astro";
 >
 	<main class="reveal">
 		<div class="slides">
-			<BlockMainThreadButtonCorner client:visible client:only />
+			<BlockMainThreadButtonCorner client:idle />
 			<Title />
 			<Fast />
 			<TechnicalIntro />
