--- a/src/slides/intro/BlockCPUButton.astro
+++ b/src/slides/intro/BlockCPUButton.astro
@@ -7,7 +7,7 @@ const subSectionTitle = "";
 ---
 
 <div class="container">
-	<BlockMainThreadButton client:visible client:only />
+	<BlockMainThreadButton client:visible />
 
 	<p>Bloque le main thread pendant 3 secondes</p>
 	<p class="fragment">
