--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -52,6 +52,6 @@ const { title } = Astro.props;
 
 <style is:global lang="scss">
 	@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700;800&display=swap");
-	@import "reveal.js/dist/reveal.css" layer(reveal);
+	@import "reveal.js/dist/reveal.css";
 	@import "src/styles/main.scss";
 </style>
