--- a/src/slides/part-2/js-libraries/vanilla-js/Anime.astro
+++ b/src/slides/part-2/js-libraries/vanilla-js/Anime.astro
@@ -1,5 +1,6 @@
 ---
 import CodeBlock from "../../../../components/CodeBlock.astro";
+import CodeSource from "../../../../components/CodeSource.astro";
 import Slide from "../../../../components/Slide.astro";
 import AnimeDemo from "./AnimeDemo.svelte";
 import AnimeDemoGrid from "./AnimeDemoGrid.svelte";
@@ -33,6 +34,7 @@ const subSectionTitle = "Vanilla JS";
 	<div class="content p-0">
 		<AnimeDemoList client:visible />
 	</div>
+	<CodeSource url="https://animejs.com/documentation/#staggeringBasics" />
 </Slide>
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
@@ -41,4 +43,5 @@ const subSectionTitle = "Vanilla JS";
 	<div class="content p-0">
 		<AnimeDemoGrid client:visible />
 	</div>
+	<CodeSource url="https://animejs.com/documentation/#gridStaggering" />
 </Slide>
