--- a/src/slides/part-3/canvas-webgl/shaders/Shaders.astro
+++ b/src/slides/part-3/canvas-webgl/shaders/Shaders.astro
@@ -6,8 +6,9 @@ import pixel from "../images/pixelShader.png";
 import vertex from "../images/vertexShader.png";
 import VertexShaderDemoImage from "./vertex/demo-image/VertexShaderDemoImage.svelte";
 import VertexShaderDemoParticles from "./vertex/demo-particles/VertexShaderDemoParticles.svelte";
-import gpuImage from "../../../intro/images/gpu-image.png"
-import gpu from "../../../../assets/gpu.png"
+import gpuImage from "../../../intro/images/gpu-image.png";
+import gpu from "../../../../assets/gpu.png";
+import CodepenSource from "../../../../components/CodepenSource.astro";
 
 const { title } = Astro.props;
 const subSectionTitle = "Shaders GLSL";
@@ -49,7 +50,7 @@ const subSectionTitle = "Shaders GLSL";
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<img
-		src={vertex}
+		data-src={vertex}
 		alt="http://daureg.free.fr/ta_webit/fonctionnement.html"
 	/>
 </Slide>
@@ -93,6 +94,11 @@ void main() {
 	<div class="content p-0">
 		<VertexShaderDemoImage client:visible />
 	</div>
+	<CodepenSource
+		pseudo="jsulpis"
+		name="Image deformation with WebGL shaders"
+		url="https://codepen.io/jsulpis/pen/abQJOvV"
+	/>
 </Slide>
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
@@ -101,6 +107,11 @@ void main() {
 	<div class="content p-0">
 		<VertexShaderDemoParticles client:visible />
 	</div>
+	<CodepenSource
+		pseudo="André Mattos"
+		name="Loading..."
+		url="https://codepen.io/ma77os/pen/JjMRmLP"
+	/>
 </Slide>
 
 <!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
@@ -135,7 +146,7 @@ void main() {
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<img
-		src={pixel}
+		data-src={pixel}
 		alt="http://daureg.free.fr/ta_webit/fonctionnement.html"
 	/>
 </Slide>
@@ -145,6 +156,7 @@ void main() {
 	<p>couleur</p>
 	<div class="content p-0">
 		<iframe
+			class="invert"
 			width="900"
 			height="500"
 			data-src="https://www.shadertoy.com/embed/MsjSW3?gui=true&t=10&paused=true&muted=false"
@@ -215,6 +227,9 @@ void main() {
 		height: 60vh;
 		width: auto;
 		aspect-ratio: 9/5;
+	}
+	iframe.invert {
+		filter: invert(1) hue-rotate(175deg);
 	}
 	img {
 		height: 50vh;
