--- a/src/components/CodeBlock.astro
+++ b/src/components/CodeBlock.astro
@@ -44,7 +44,7 @@ const { lang, lines } = Astro.props;
 			padding: 2em;
 
 			&::-webkit-scrollbar {
-				display: none; // don't do that in production
+				display: none; // please don't do that in a real app
 			}
 		}
 	}
