--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,6 +30,8 @@ import Fast from "../slides/intro/Fast.astro";
 	<main class="reveal">
 		<div class="slides">
 			<BlockMainThreadButtonCorner client:idle />
+
+			<!-- Intro -->
 			<Title />
 			<Fast />
 			<TechnicalIntro />
