--- a/src/slides/intro/Title.astro
+++ b/src/slides/intro/Title.astro
@@ -18,7 +18,7 @@ import TitleBackground from "./TitleBackground.svelte";
 		</h1>
 		<div class="presenter">
 			<p>Julien Sulpis</p>
-			<small>02/06/2023</small>
+			<!-- <small>02/06/2023</small> -->
 		</div>
 	</div>
 </Slide>
