--- a/src/slides/part-1/css/transition/RotationBezierCurves.astro
+++ b/src/slides/part-1/css/transition/RotationBezierCurves.astro
@@ -16,14 +16,14 @@ const subSectionTitle = "Utilisation";
 
 <SlideDemo sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<p><span class="icon-wrapper"><span class="icon fear">👍</span></span></p>
-	<CodeBlock lang="css"
-		>{
+	<CodeBlock lang="css">
+		{
 			`.icon:hover {
   transform: rotate(1turn);
   transition: transform 800ms;
 }`
-		}</CodeBlock
-	>
+		}
+	</CodeBlock>
 </SlideDemo>
 
 <!-- <SlideDemo sectionTitle={title} subSectionTitle={subSectionTitle}>
