--- a/src/slides/part-3/canvas-webgl/CanvasWebglLibs.astro
+++ b/src/slides/part-3/canvas-webgl/CanvasWebglLibs.astro
@@ -4,7 +4,7 @@ const { title } = Astro.props;
 const subSectionTitle = "Autres librairies";
 ---
 
-<!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
+<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<div class="fragment container">
 		<h3>React-three-fiber</h3>
 		<p>Renderer React pour three.js</p>
@@ -32,7 +32,7 @@ const subSectionTitle = "Autres librairies";
 		<h3>Threlte</h3>
 		<p>Librairie de composants three.js pour Svelte</p>
 	</div>
-</Slide> -->
+</Slide>
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<p class="big">Il n'y a pas que three.js ...</p>
