--- a/src/slides/part-4/Recap.astro
+++ b/src/slides/part-4/Recap.astro
@@ -13,9 +13,15 @@ import Slide from "../../components/Slide.astro";
 	<div class="author big">
 		<h2>@jsulpis</h2>
 		<div class="icons">
-			<img data-src={github} alt="" />
-			<img data-src={codepen} alt="" />
-			<img data-src={twitter} alt="" />
+			<a href="https://github.com/jsulpis" target="_blank"
+				><img data-src={github} alt="github" /></a
+			>
+			<a href="https://codepen.io/jsulpis" target="_blank"
+				><img data-src={codepen} alt="codepen" /></a
+			>
+			<a href="https://twitter.com/jsulpis" target="_blank"
+				><img data-src={twitter} alt="twitter" /></a
+			>
 		</div>
 	</div>
 </Slide>
@@ -24,9 +30,15 @@ import Slide from "../../components/Slide.astro";
 	<div class="author">
 		<h2>@jsulpis</h2>
 		<div class="icons">
-			<img data-src={github} alt="" />
-			<img data-src={codepen} alt="" />
-			<img data-src={twitter} alt="" />
+			<a href="https://github.com/jsulpis" target="_blank"
+				><img data-src={github} alt="github" /></a
+			>
+			<a href="https://codepen.io/jsulpis" target="_blank"
+				><img data-src={codepen} alt="codepen" /></a
+			>
+			<a href="https://twitter.com/jsulpis" target="_blank"
+				><img data-src={twitter} alt="twitter" /></a
+			>
 		</div>
 	</div>
 	<div class="content p-0">
