--- a/src/slides/part-1/vanilla-js/requestanimationframe/RequestAnimationFrame.astro
+++ b/src/slides/part-1/vanilla-js/requestanimationframe/RequestAnimationFrame.astro
@@ -22,8 +22,8 @@ const title = "requestAnimationFrame()";
 	<Slide>
 		<h1>{title + " "}</h1>
 		<p>
-			<strong>Usage:</strong> toute action à effectuer avant chaque frame rendue par le
-			navigateur
+			<strong>Usage:</strong> toute action à effectuer avant chaque frame rendue
+			par le navigateur
 		</p>
 	</Slide>
 
