chore: remove warning during the build

--- a/src/slides/part-1/css/transition/ExampleButton.astro
+++ b/src/slides/part-1/css/transition/ExampleButton.astro
@@ -115,11 +115,11 @@ const subSectionTitle = "Démos";
 			transition: background-color 100ms;
 
 			&:hover {
-				background: hsla(0, 0, 0, 0.06);
+				background: hsla(0, 0%, 0%, 0.06);
 			}
 
 			&:active {
-				background: hsla(0, 0, 0, 0.1);
+				background: hsla(0, 0%, 0%, 0.1);
 			}
 		}
 	}
