--- a/src/styles/_abstract.scss
+++ b/src/styles/_abstract.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 /*=================*/
 /*     Values      */
 /*=================*/
@@ -86,8 +88,9 @@ $palette: (
 	);
 }
 @function highlight($opacity: 40%, $width: 0.1em) {
-	@return inset 0 $width/3 $width hsl(0deg 0% 100%),
-		inset 0 (-$width/3) $width rgb(0 0 0 / #{$opacity}), var(--shadow-md);
+	@return inset 0 math.div($width, 3) $width hsl(0deg 0% 100%),
+		inset 0 (-1 * math.div($width, 3)) $width rgb(0 0 0 / #{$opacity}),
+		var(--shadow-md);
 }
 
 /*=================*/
