--- a/src/slides/part-3/canvas-webgl/shaders/Shaders.astro
+++ b/src/slides/part-3/canvas-webgl/shaders/Shaders.astro
@@ -69,7 +69,7 @@ const subSectionTitle = "Shaders GLSL";
 	</div>
 </Slide> -->
 
-<!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
+<Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
 	<h3>Vertex Shader</h3>
 	<p>geométrie</p>
 	<div class="content p-0">
@@ -86,7 +86,7 @@ void main() {
 			}
 		</CodeBlock>
 	</div>
-</Slide> -->
+</Slide>
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<h3>Vertex Shader</h3>
@@ -114,6 +114,13 @@ void main() {
 	/>
 </Slide>
 
+<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
+	<img
+		data-src={pixel}
+		alt="http://daureg.free.fr/ta_webit/fonctionnement.html"
+	/>
+</Slide>
+
 <!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<h3>Fragment Shader</h3>
 	<p>couleur</p>
@@ -128,7 +135,7 @@ void main() {
 	</div>
 </Slide> -->
 
-<!-- <Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
+<Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
 	<h3>Fragment Shader</h3>
 	<p>couleur</p>
 	<div class="content p-0">
@@ -142,13 +149,6 @@ void main() {
 			}
 		</CodeBlock>
 	</div>
-</Slide> -->
-
-<Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
-	<img
-		data-src={pixel}
-		alt="http://daureg.free.fr/ta_webit/fonctionnement.html"
-	/>
 </Slide>
 
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle} animate={false}>
