--- a/src/slides/part-3/canvas-webgl/CanvasWebglIntro.astro
+++ b/src/slides/part-3/canvas-webgl/CanvasWebglIntro.astro
@@ -14,8 +14,7 @@ const { title } = Astro.props;
 <Slide>
 	<h1>{title + " "}</h1>
 	<p>
-		<strong>Usage:</strong> mettre une claque à vos utilisateurs à coup d'animations qui sortent
-		de l'ordinaire
+		<strong>Usage:</strong> mettre une claque à vos utilisateurs à coup d'animations immersives
 	</p>
 </Slide>
 
@@ -44,36 +43,36 @@ const gl = canvas.getContext("webgl");
 const vertexBuffer = gl.createBuffer();
 gl.bindBuffer(gl.ARRAY_BUFFER, vertexBuffer);
 gl.bufferData(
-	gl.ARRAY_BUFFER,
-	new Float32Array([-1, -1, 1, -1, 0, 1]),
-	gl.STATIC_DRAW
+  gl.ARRAY_BUFFER,
+  new Float32Array([-1, -1, 1, -1, -1, 1, 1, 1]),
+  gl.STATIC_DRAW
 );
 
 vertexBuffer.itemSize = 2;
-vertexBuffer.numItems = 3;
+vertexBuffer.numItems = 4;
 
 // Shaders
 const vertexShaderSource =
-	"attribute vec2 a_position;" +
-	"void main() { gl_Position = vec4 (a_position, 0,1); }";
+  "attribute vec2 a_position;" +
+  "void main() { gl_Position = vec4 (a_position, 0,1); }";
 const fragmentShaderSource =
-	"precision mediump float;" +
-	"void main() { gl_FragColor = vec4 (0.9,0,0.1,1); }";
+  "precision mediump float;" +
+  "void main() { gl_FragColor = vec4 (0.9,0,0.1,1); }";
 
 const buildShader = function (shaderSource, typeOfShader) {
-	const shader = gl.createShader(typeOfShader);
-	gl.shaderSource(shader, shaderSource);
-	gl.compileShader(shader);
-	return shader;
+  const shader = gl.createShader(typeOfShader);
+  gl.shaderSource(shader, shaderSource);
+  gl.compileShader(shader);
+  return shader;
 };
 
 const compiledVertexShader = buildShader(
-	vertexShaderSource,
-	gl.VERTEX_SHADER
+  vertexShaderSource,
+  gl.VERTEX_SHADER
 );
 const compiledFragmentShader = buildShader(
-	fragmentShaderSource,
-	gl.FRAGMENT_SHADER
+  fragmentShaderSource,
+  gl.FRAGMENT_SHADER
 );
 
 // Setup GLSL program
@@ -87,14 +86,14 @@ gl.useProgram(program);
 const positionLocation = gl.getAttribLocation(program, "a_position");
 gl.enableVertexAttribArray(positionLocation);
 gl.vertexAttribPointer(
-	positionLocation,
-	vertexBuffer.itemSize,
-	gl.FLOAT,
-	false,
-	0,
-	0
+  positionLocation,
+  vertexBuffer.itemSize,
+  gl.FLOAT,
+  false,
+  0,
+  0
 );
-gl.drawArrays(gl.TRIANGLES, 0, vertexBuffer.numItems);`}</code></pre>
+gl.drawArrays(gl.TRIANGLE_STRIP, 0, vertexBuffer.numItems);`}</code></pre>
 			</div>
 		</FlexContainer>
 		<CanvasWebGLTriangle client:visible />
