--- a/src/slides/part-3/canvas-webgl/shaders/Shaders.astro
+++ b/src/slides/part-3/canvas-webgl/shaders/Shaders.astro
@@ -93,10 +93,7 @@ const subSectionTitle = "Shaders GLSL";
 				`uniform float time;
 
 void main() {
-  vec3 localSpacePosition = position;
-  localSpacePosition.z += sin(time);
-
-  gl_Position = projectionMatrix * modelViewMatrix * vec4(localSpacePosition, 1.0);
+  gl_Position = vec4(0.0, 0.0, sin(time), 1.0);
 }`
 			}
 		</CodeBlock>
@@ -119,13 +116,14 @@ void main() {
 <Slide sectionTitle={title} subSectionTitle={subSectionTitle}>
 	<h3>Vertex Shader</h3>
 	<p>geométrie</p>
-	<div class="content p-0">
+	<div class="content fullpage">
 		<VertexShaderDemoParticles client:visible />
 	</div>
 	<CodepenSource
-		pseudo="André Mattos"
-		name="Loading..."
-		url="https://codepen.io/ma77os/pen/JjMRmLP"
+		pseudo="Three.js"
+		name="particles billboards example"
+		url="https://threejs.org/examples/#webgl_points_billboards"
+		platform="other"
 	/>
 </Slide>
 
@@ -284,5 +282,9 @@ void main() {
 	.gpu-wrapper img.big {
 		height: 50vh;
 		object-fit: contain;
+	}
+	.fullpage {
+		position: relative;
+		z-index: -1;
 	}
 </style>
